Repaired database failure.

--- a/week08/day3/finder/src/main/resources/templates/index.html
+++ b/week08/day3/finder/src/main/resources/templates/index.html
@@ -19,8 +19,8 @@
         <th>Last name</th>
     </tr>
     <tr th:each="swag : ${yolo}">
-        <td th:text="${yolo.firstName}">Lacika</td>
-        <td th:text="${yolo.lastName}">Kovács</td>
+        <td th:text="${swag.firstName}">Lacika</td>
+        <td th:text="${swag.lastName}">Kovács</td>
     </tr>
 </table>
 </body>
