Extended Todo application is done.

--- a/week08/day1/src/main/resources/templates/todolist.html
+++ b/week08/day1/src/main/resources/templates/todolist.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Todo list</title>
 </head>
 <body>
-<h1>Todos for today:</h1>
-<ul th:each="todo : ${todos}">
-    <li th:text="${todo.title}"></li>
-</ul>
+
+<h1>Todos</h1>
+<h2>New Todo</h2>
+
+<form action="#" th:action="@{/todo/add}" th:object="${todo}" method="post">
+    <input type="text" th:field="*{title}"/>
+    <input type="submit" value="add">
+</form>
+
+
+<form action="#" th:action="@{/todo/search}" method="post">
+    <label for="search"><h2>Search</h2></label>
+    <input type="search" id="search" name="search"/>
+    <input type="submit" value="Search"/>
+</form>
+
+<br>
+
+<table>
+    <thead>
+
+    <th>Todo</th>
+    <th>Actions</th>
+
+    </thead>
+    <tr th:each="todo : ${todos}">
+
+        <td th:text="${todo.title}">
+        </td>
+
+        <td><a th:href="@{'/todo/' + ${todo.id} + '/delete'}">Remove</a>
+            <br>
+            <a th:href="@{'/todo/' + ${todo.id} + '/edit'}">Complete</a></td>
+    </tr>
+
+</table>
+
 </body>
 </html>
